<resources>
    <string name="app_name">多模直播系统</string>
    <string name="menu">菜单</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="live">直播</string>
    <string name="team">团队</string>
    <string name="contacts">联系人</string>
    <string name="local_file">本地文件</string>
    <string name="cloud_file">云文件</string>
    <string name="more">更多</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="cpassword">确认密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="copyright">copyright©ydswinter all reserved</string>
    <string name="nick_name">昵称</string>
    <string name="user_info">用户信息</string>
    <string name="ip">IP地址</string>
    <string name="description">描述信息</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
