<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpFragment"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/editor_background"
            android:layout_marginTop="100dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/account"
                android:layout_marginLeft="12dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="#fff"
                android:hint="@string/account"
                android:textColor="#000"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/editor_background"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/password"
                android:layout_marginLeft="12dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="#fff"
                android:hint="@string/password"
                android:textColor="#000"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/editor_background"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/password"
                android:layout_marginLeft="12dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="#fff"
                android:hint="@string/cpassword"
                android:textColor="#000"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/big_circular_button"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="16sp"
            />


</LinearLayout>