<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            >
            <ImageButton
                android:id="@+id/open"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:src="@mipmap/menu"
                android:contentDescription="@string/menu"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:id="@+id/picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/head"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="托尼 斯塔克"
                    android:textColor="#fff"
                    />
            </LinearLayout>
        </RelativeLayout>



    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        >
        <RelativeLayout
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:src="@mipmap/live"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live"
                    android:textColor="#000"
                    android:padding="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:src="@mipmap/team"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:textColor="#000"
                    android:padding="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
        android:layout_columnWeight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:src="@mipmap/contacts"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textColor="#000"
                android:padding="5dp"
                />
        </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:src="@mipmap/cloud"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud_file"
                    android:textColor="#000"
                    android:padding="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:src="@mipmap/local_file"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_file"
                    android:textColor="#000"
                    android:padding="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:src="@mipmap/more"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textColor="#000"
                    android:padding="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>

    </GridLayout>
</LinearLayout>