<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingTop="20dp"
    >
    <RelativeLayout
        android:id="@+id/item_feedback"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_menu_item"
        android:contentDescription="@string/feedback"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/feedback"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/feedback"
            android:textColor="#000"
            android:layout_marginLeft="36dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/item_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_menu_item"
        android:contentDescription="@string/setting"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/setting"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/setting"
            android:textColor="#000"
            android:layout_marginLeft="36dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/item_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_menu_item"
        android:contentDescription="@string/about"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/about"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/about"
            android:textColor="#000"
            android:layout_marginLeft="36dp"
            />
    </RelativeLayout>
</LinearLayout>