<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/editor_background"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/account"
                android:layout_marginLeft="12dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="#fff"
                android:hint="@string/account"
                android:textColor="#000"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/editor_background"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/password"
                android:layout_marginLeft="12dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="#fff"
                android:hint="@string/password"
                android:textColor="#000"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/big_circular_button"
                android:text="@string/sign_in"
                android:textColor="#fff"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>